--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   connectivity_plus: ^3.0.3
   http: ^0.13.5
   flutter_secure_storage: ^8.0.0
+  crypto: ^3.0.2
+  provider: ^6.0.5
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
