--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,12 @@
     "editor.codeActionsOnSave": {
         "source.fixAll": true,
         "source.organizeImports": true
+    },
+    "editor.fontLigatures": false,
+    "command-runner.commands": {
+        "pub get":"flutter pub get",
+        "build_runner":"flutter pub run build_runner build",
+        "build_runner_fix":"flutter pub run build_runner build --delete-conflicting-outputs"
     }
 
 }
