--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,6 +9,13 @@
 # packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 
+analyzer:
+  exclude:
+    - '**/*.freezed.dart'
+    - '**/*.g.dart'
+  errors:
+    invalid_annotation_target: ignore
+
 linter:
   # The lint rules applied to this project can be customized in the
   # section below to disable rules from the `package:flutter_lints/flutter.yaml`
@@ -23,7 +30,7 @@ linter:
   # producing the lint.
   rules:
     prefer_relative_imports: true
-    sort_constructors_first: true
+    # sort_constructors_first: true
     sort_unnamed_constructors_first: true
     prefer_single_quotes: true
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
