--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,12 @@ dependencies:
   json_annotation: ^4.8.1
   freezed_annotation: ^2.2.0
   sticky_grouped_list: ^3.1.0
+  extended_image: ^8.0.1
+  flutter_svg: ^2.0.5
+  grouped_list: ^5.1.2
+  google_fonts: ^4.0.4
+  shared_preferences: ^2.1.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +58,7 @@ dev_dependencies:
   build_runner: ^2.3.3
   json_serializable: ^6.6.2
   freezed: ^2.3.4
+  flutter_gen_runner: ^5.3.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -61,8 +68,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/agilc_logo.png
-
+    - assets/images/
   fonts:
     - family: Roboto
       fonts:
@@ -95,3 +101,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_gen:
+  output: lib/app/generated/
+  integrations:
+    flutter_svg: true
