--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   google_fonts: ^4.0.4
   shared_preferences: ^2.1.1
   intl: ^0.18.1
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
