--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="net.guanxemc.agilc">
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="agilc"
+        android:label="Lucha Canaria - Información"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
         android:allowBackup="false"
